--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -3,21 +3,12 @@ body {
     padding-left:7px;
     padding-right:7px;
     overflow-x: hidden;
-}
-html:before {
-content: "";
-        position: absolute;
-        height: 20%; width: 20%;
-        background: url(../../bg.jpg);
-        background-size: cover;
-        z-index: -1; /* Keep the background behind the content */
-        
-        /* don't forget to use the prefixes you need */
-        -webkit-transform: scale(5);
-        -webkit-transform-origin: top left;
-        -webkit-filter: blur(1px);
-        overflow: hidden;
-
+     
+background: url(../../css/bg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .well{
