--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,20 @@
-
-html:before {
-content: "";
-        position: absolute;
-        height: 20%; width: 20%;
-        background: url(../bg.jpg);
-        background-size: cover;
-        z-index: -1; /* Keep the background behind the content */
-        
-        /* don't forget to use the prefixes you need */
-        -webkit-transform: scale(5);
-        -webkit-transform-origin: top left;
-        -webkit-filter: blur(1px);
-        overflow: hidden;
-
-}
 body{
-    padding-top: 61px; }
+    padding-top: 61px;
+    background: url(bg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  
+ #about{
+ 	background:rgba(255,255,255, 0.9);
+ 	padding-top:10px;
+	padding-bottom:10px;
+	margin-left:10px;
+ }
+ 
+ #details {
+ 	background:rgba(255,255,255, 0.3);
+ 	border: 2px solid;
+    	border-radius: 25px;
+ }
